# nightride-tui

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md  THIRD_PARTY_LICENSES.md  about.hbs  about.toml  build.rs  clippy.toml  nightride-tui.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
LICENSES/: Apache-2.0.txt  Nightride-FM-Font.txt  SIL-OFL-1.1.txt
assets/: IosevkaTermNerdFont-Regular.LICENSE.txt  NightrideFMMonospace.LICENSE.txt  banner-3.txt  banner-ansi-shadow.txt  banner-bloody.txt
assets/macos/: Info.plist
assets/windows/: README.md  Resource.rc
scripts/: append-font-licenses.sh  check-trailers.sh  install.sh
src/: error.rs  lib.rs  logging.rs  main.rs  metadata.rs  station.rs  theme.rs  update_check.rs
src/audio/: decode.rs  hls.rs  http.rs  mod.rs  reconnect.rs  source.rs  supervisor.rs
src/cli/: fonts.rs  mod.rs  update_windows.rs
src/config/: loader.rs  mod.rs  persist.rs
src/metadata/: mod.rs  sse.rs
src/ui/: app.rs  app_tests.rs  chrome.rs  input.rs  mod.rs  run.rs  tui.rs
src/ui/render/: chord.rs  header.rs  mod.rs  now_playing.rs  spectrum.rs
